syntax = "proto3";

package backend_service_catalog;

option csharp_namespace = "Crib2023.Grpc.Backend.Services.Catalog";

import "backend_service_catalog.proto";

service CatalogArticleService {
  rpc GetItem (CatalogArticleItemGetOperationRequest) returns (CatalogArticleItemGetOperationReply);
  rpc GetList (CatalogArticleListGetOperationRequest) returns (CatalogArticleListGetOperationReply);
}

// GetItem Request

message CatalogArticleItemGetOperationRequest {
  CatalogArticleItemGetOperationInput input = 1;
  string operation_code = 2;
}

message CatalogArticleItemGetOperationInput {
  int64 id = 1;
  string title = 2;
  int64 topic_id = 3;
}

// GetItem Reply

message CatalogArticleItemGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  CatalogArticleItemGetOperationOutput output = 4;
  repeated CatalogInvalidInputProperty invalid_input_properties = 5;
}

message CatalogArticleItemGetOperationOutput {
  CatalogArticleEntity item = 1;
}

message CatalogArticleEntity {
  CatalogArticleTypeEntity data = 1;
  repeated CatalogOptionValueObject topic_path_items = 2;
}

message CatalogArticleTypeEntity {  
  int64 id = 1;
  string title = 2;
  int64 topic_id = 3;
  string row_guid = 4;  
  string body = 5;
}

// GetList Request

message CatalogArticleListGetOperationRequest {
  CatalogArticleListGetOperationInput input = 1;
  string operation_code = 2;
}

message CatalogArticleListGetOperationInput {
  int32 page_number = 1;
  int32 page_size = 2;
  string sort_field = 3;
  string sort_direction = 4;
  repeated int64 ids = 5;
  string title = 6;
  int64 topic_id = 7;
  repeated int64 topic_ids = 8;
  string topic_name = 9;  
}

// GetList Reply

message CatalogArticleEntityForList {
  CatalogArticleTypeEntityForList data = 1;
  repeated CatalogOptionValueObject topic_path_items = 2;
}

message CatalogArticleTypeEntityForList {
  int64 id = 1;  
  string title = 2;
  int64 topic_id = 3;
  string row_guid = 4;  
}

message CatalogArticleListGetOperationReply {
  bool is_ok = 1;
  string operation_code = 2;
  repeated string error_messages = 3;
  CatalogArticleListGetOperationOutput output = 4;
  repeated CatalogInvalidInputProperty invalid_input_properties = 5;
}

message CatalogArticleListGetOperationOutput {
  repeated CatalogArticleEntityForList items = 1;
  int64 total_count = 2;
}
